--- a/desafios/modulo-01/d009/index.html
+++ b/desafios/modulo-01/d009/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>Meus vídeos</title>
 </head>
 
@@ -21,9 +22,14 @@
 
     <br>
     <!-- Link HARDWARE-->
-    <img src="imagens/thumb-hardware.png" alt="">
+    <a href="pagHardware.html">
+        <img src="imagens/thumb-hardware.png" alt="">
+    </a>
+
     <!-- Link PYTHON-->
-    <img src="imagens/thumb-python.png" alt="">
+    <a href="pagPython.html">
+        <img src="imagens/thumb-python.png" alt="">
+    </a>
 
 
 </body>
