--- a/desafios/modulo-01/d009/pagHTML.html
+++ b/desafios/modulo-01/d009/pagHTML.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>HTML5</title>
 </head>
 
 <body>
     <h1>Curso de HTML5</h1>
-    <iframe width="560" height="315"
+    <iframe width="500" height="315"
         src="https://www.youtube.com/embed/videoseries?si=HXn4T457dGQaQSs-&amp;list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -18,7 +19,7 @@
     <a href="https://www.youtube.com/playlist?list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank">
         <p>Veja o curso completo</p>
     </a>
-    <a href="index.html"><img width="60" src="imagens/voltar2.png" alt=""></a>
+    <a href="index.html"><img width="40" src="imagens/voltar2.png" alt=""></a>
 </body>
 
 </html>
