--- a/desafios/modulo-01/d009/pagJS.html
+++ b/desafios/modulo-01/d009/pagJS.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>JavaScript</title>
 </head>
 
 <body>
     <h1>Curso de JavaScript</h1>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA?si=xJGeWWjAqYgUK2gv"
+    <iframe width="500" height="315" src="https://www.youtube.com/embed/BXqUH86F-kA?si=xJGeWWjAqYgUK2gv"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -18,7 +19,7 @@
         target="_blank">
         <p>Veja o curso completo</p>
     </a>
-    <a href="index.html"><img width="60" src="imagens/voltar2.png" alt=""></a>
+    <a href="index.html"><img width="40" src="imagens/voltar2.png" alt=""></a>
 </body>
 
 </body>
