--- a/exercicios/ex016/cores03.html
+++ b/exercicios/ex016/cores03.html
@@ -11,29 +11,36 @@
         <h1>Site de Exemplo</h1>
         <h2>Título 1</h2>
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio magnam deserunt voluptates consectetur libero accusantium veritatis modi, voluptas eveniet. Sed in fugit maiores quibusdam ipsum harum recusandae quo architecto dolor.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio magnam deserunt voluptates consectetur libero accusantium veritatis modi, voluptas eveniet. Sed in fugit maiores quibusdam 
+            ipsum harum recusandae quo architecto dolor.
         </p>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis exercitationem consectetur culpa, nihil totam consequuntur nobis ab libero aperiam vitae et quod, repellat doloremque soluta sapiente numquam! Quaerat, consequuntur?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius debitis exercitationem consectetur 
+            culpa, nihil totam consequuntur nobis ab libero aperiam vitae et quod, repellat doloremque soluta sapiente numquam! Quaerat, consequuntur?
         </p>
 
         <h2>Título 2</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime placeat fugiat odio ducimus delectus debitis architecto, asperiores illo! Eligendi optio reiciendis voluptatum! Consequatur eius quia sequi eum dicta dolores.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero maxime placeat fugiat odio
+             ducimus delectus debitis architecto, asperiores illo! Eligendi optio reiciendis voluptatum!
+             Consequatur eius quia sequi eum dicta dolores.
         </p>
 
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, dicta sint perspiciatis ipsum quam exercitationem sit eos sunt repellat voluptate nihil maiores amet aliquid illum eaque sapiente labore error voluptas.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed, dicta sint perspiciatis ipsum quam exercitationem sit eos sunt repellat voluptate nihil maiores amet aliquid illum eaque sapiente
+             labore error voluptas.
         </p>
 
         <h2>Título 3</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis recusandae harum suscipit in omnis doloremque corrupti repellendus reiciendis deleniti? Accusamus ex adipisci illum repellat sapiente numquam optio ad voluptatibus beatae.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis recusandae harum suscipit in 
+            omnis doloremque corrupti repellendus reiciendis deleniti? Accusamus ex adipisci illum repellat sapiente numquam optio ad voluptatibus beatae.
         </p>
 
         <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam labore culpa ipsa repellat fuga quod veritatis enim consectetur quis in molestiae nulla laborum vero aspernatur facere quos, sapiente ut? Possimus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam labore culpa ipsa repellat 
+            fuga quod veritatis enim consectetur quis in molestiae nulla laborum vero aspernatur facere quos, sapiente ut? Possimus.
         </p>
     </main>
 </body>
