--- a/exercicios/ex017/index.html
+++ b/exercicios/ex017/index.html
@@ -7,10 +7,21 @@
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif;
-        }
+            /*
+            Medida Absoluta:
+            cm, mm, in, px, pt, pc
 
-        h1, h2 {
-            font-family: 'Times New Roman', Times, serif;
+            Medida Relativa:
+            em = relativa a Letra M da font 
+            ex = medida relativa a altura x de uma font
+            rem = relativo ao root config no body
+            vw = largura da tela (% da view port)
+            vh = altura da tela (% da view port)
+            %
+            16px geralmente é = 1em
+            Recomendação oficial= usar px ou em
+            */
+        font-size: 1em;
         }
     </style>
 </head>
