cap. 14  peso, estilo
commit feito pelo linux mint.

--- a/exercicios/ex017/index.html
+++ b/exercicios/ex017/index.html
@@ -23,6 +23,18 @@
             */
         font-size: 1em;
         }
+
+        /* shorthand font
+        - font-style -> font-weight -> font size -> font-family
+
+        font-family: 'Work Sans', sans-serif;
+        font-weight: bolder;
+        font-size: 3em;
+        font-style: italic;
+        ou em uma única linha
+        ordem:font-style -> font-weight -> font size -> font-family
+        font: italic bolder 3em 'Work Sans', sans-serif;        
+        */
     </style>
 </head>
 <body>
