Capítulo 17 Aula 1 – Criando um projeto a partir do zero

--- a/desafios/modulo-01/d009/pagJS.html
+++ b/desafios/modulo-01/d009/pagJS.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>JavaScript</title>
+    <link rel="stylesheet" href="style01.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         target="_blank">
         <p>Veja o curso completo</p>
     </a>
-    <a href="index.html"><img width="40" src="imagens/voltar2.png" alt=""></a>
+    <a href="index.html"><img width="40" src="imagens/voltar.png" alt=""></a>
 </body>
 
 </body>
