--- a/desafios/modulo-01/d009/pagPython.html
+++ b/desafios/modulo-01/d009/pagPython.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="imagens/" type="image/x-icon">
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>Python</title>
+    <link rel="stylesheet" href="style01.css">
 
 </head>
 
@@ -22,7 +23,7 @@
     </a>
 
     <a href="index.html">
-        <img width="40" src="imagens/voltar2.png" alt="">
+        <img width="40" src="imagens/voltar.png" alt="">
     </a>
 </body>
 
