--- a/desafios/modulo-01/d009/pagHardware.html
+++ b/desafios/modulo-01/d009/pagHardware.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
     <title>Hardware</title>
+    <link rel="stylesheet" href="style01.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     </a>
 
     <a href="index.html">
-        <img width="40" src="imagens/voltar2.png" alt="">
+        <img width="40" src="imagens/voltar.png" alt="">
     </a>
 
 </body>
