--- a/desafios/modulo-02/d010/android.html
+++ b/desafios/modulo-02/d010/android.html
@@ -30,8 +30,8 @@
             <h2>A primeira versão</h2>
 
             <p>A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado 
-                <a href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">
-                    Dan Morrill</a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br" target="_blank">Inkscape</a> 
+                <a class="externo" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank">
+                    Dan Morrill</a>. Ele conta que abriu o <a class="externo" href="https://inkscape.org/pt-br" target="_blank">Inkscape</a> 
                     (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas 
                     personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a 
                     criação de um mascote.</p>
@@ -47,7 +47,7 @@
             <h2>Surge um novo mascote</h2>
 
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. 
-                A ilustradora Russa <a href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, 
+                A ilustradora Russa <a class="externo" href="https://www.irinablok.com/android" target="_blank">Irina Blok</a>, 
                 também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais 
                 agradável.</p>
 
@@ -67,7 +67,9 @@
                  criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a 
                  identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=hUJjbVd704aA_sna" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=hUJjbVd704aA_sna" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
             
             <aside>
                 <h3>Quer aprender mais?</h3>
@@ -93,7 +95,7 @@
                 <p>Infelizmente, o <strong>Android Q</strong> não existiu, pois o Google resolveu pôr fim a essa 
                     divertida prática e começou a usar numerações, o que deu origem ao Android 10.</p>
 
-                <p>Acesse aqui o site <a href="https://www.android.com/intl/en_uk/history/#donut/" target="_blank">Android History
+                <p>Acesse aqui o site <a class="externo" href="https://www.android.com/intl/en_uk/history/#donut/" target="_blank">Android History
 
                 </a> para conhecer a sequência das versões "adocicadas" e o que cada uma trouxe para o sistema Android.</p>
             </aside>
